--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
     </div>
     <script type="text/javascript" src="brandlist.json"></script>
-    <script type="text/javascript" src="assets/js/main.min.js"></script>
+    <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 
 </html>
